# rust-hps-inventory

./: .gitignore  AGENTS.md  README.md  db_init.sql  hps-app-requirements.md  seed_db.py
assets/: cornice_rate.csv  overall_stock.csv
libfprint-CS9711/: NEWS  README.md  devbox.json  meson.build
libfprint-CS9711/.gitlab-ci/: libfprint-image-variables.yaml  libfprint-templates.yaml
libfprint-CS9711/data/: autosuspend.hwdb
libfprint-CS9711/examples/: employee-clock-helper.c  meson.build
libfprint-CS9711/libfprint/: fp-image.c  fp-image.h  fpi-image.h  fprint-list-udev-hwdb.c  meson.build
libfprint-CS9711/libfprint/drivers/: elan.c  vfs101.c  vfs5011.c  vfs7552.c
libfprint-CS9711/libfprint/drivers/cs9711/: cs9711.c
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  fingerprint.rs  lib.rs  main.rs  models.rs
ui/: index.html  styles.css
ui/js/: api.js  app.js  auth.js
